3.28.15
=======
Nov 5, 2022
- Raise error when attempt is name to parse empty feature file
- Raise error when attempt is made to process feature with no steps

3.28.14
=======
Oct 14, 2022
- Minor update to Gwen logo in HTML reports

3.28.13
=======
Oct 10, 2022
- Remove experimental `: "<message>"` syntax for custom assertion messages. Use `@Message("<message>")` annotation instead. Fixes issue gwen-interpreter/gwen-web#99
  
3.28.12
=======
Oct 9, 2022
- Update Gwen logo in HTML reports

3.28.11
=======
Oct 6, 2022
- Remove scala2 v2.13.9 override which breaks system process on directories with trailing slashes on windows (pick up v2.13.8 instead). Fixes issue gwen-interpreter/gwen-web#98

3.28.10
=======
Sep 30, 2022
- Windows fix for escaping new line characters in steps (issue gwen-interpreter/gwen-web#96)

3.28.9
======
Sep 30, 2022
- Windows fix for escaping new line characters from data table cells (issue gwen-interpreter/gwen-web#96)
- Fix spelling of behavior rules setting in error messages

3.28.8
======
Sep 30, 2022
- Escape new line characters from data table cells (issue gwen-interpreter/gwen-web#96)
- Execute windows system processes as single command strings instead of a sequence (issue gwen-interpreter/gwen-web#97)

3.28.7
======
Sep 29, 2022
- Update runtime dependencies
  - Update scala from v3.1.2 to v3.2.0
  - Update gherkin from v23.0.1 to v24.0.0
  - Update slf4j from v1.7.32 to v1.7.36
  - Update slf4jLog4j from v2.17.1 to v2.19.0
  - Update scopt from v4.0.1 to 4.1.0
  - Update jodaTime v2.10.14 to v2.11.2
  - Update scalatags from v0.11.1 to v0.12.0
  - Update jackson-databind from v2.13.3 to v2.13.4
  - Update tika-core from v1.28.4 to v1.28.5
- Update test dependencies
  - Update scalaTest from v3.2.11 to v3.2.14
  - Update scalaTestPlusMockito from v3.2.10.0 to v3.2.11.0
  - Update mockitoCore from v3.12.4 to v4.8.0
  - Update h2 from v1.4.200 to v2.1.214

3.28.4
======
Sep 29, 2022
- Ignore empty CSV records in examples and lookups
