@@ -1,8 +1,9 @@
 3.28.15
 =======
-Nov 5, 2022
+Nov 6, 2022
 - Raise error when attempt is name to parse empty feature file
 - Raise error when attempt is made to process feature with no steps
+- Fix resolve of nested masked settings
 
 3.28.14
 =======
